// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders date 1`] = `
<div
  className="txt"
>
  <label
    className="txt-l"
    htmlFor="DATE-SEEN"
  >
    
     
    <span
      className="t--req"
    >
      Required
    </span>
  </label>
  <div
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
  >
    <input
      aria-required={true}
      className="txt-f css-1b2781b "
      id="DATE-SEEN"
      name="DATE-SEEN"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="mm/dd/yyyy"
      value="12/31/2017"
    />
    <span
      className="t--err p-a300"
    />
  </div>
</div>
`;

exports[`rendering renders time 1`] = `
<div
  className="txt"
>
  <label
    className="txt-l"
    htmlFor="DATE-SEEN"
  >
    
     
    <span
      className="t--req"
    >
      Required
    </span>
  </label>
  <div
    className={
      Object {
        "data-css-19lcmdn": "",
      }
    }
  >
    <input
      aria-required={true}
      className="txt-f css-1b2781b "
      id="DATE-SEEN"
      name="DATE-SEEN"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="mm/dd/yyyy"
      value=""
    />
    <input
      aria-label=" time field"
      aria-required={true}
      className="txt-f css-1b2781b "
      name="DATE-SEEN time"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="hh:mm am/pm"
      value=""
    />
    <span
      className="t--err p-a300"
    />
  </div>
</div>
`;
